@@ -1,6 +1,8 @@
 Revision history for Test-Warnings
 
 {{$NEXT}}
+          - new :report_warnings feature, for printing all of the (unexpected)
+            warning content when had_no_warnings() is called (Tina Mueller, PR#10)
 
 0.028     2019-12-21 20:16:01Z
           - allow for calling warnings->import being called after importing
